--- a/Recent-posts.html
+++ b/Recent-posts.html
@@ -26,7 +26,7 @@
             <ul class="nav-bar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="About-me.html">About Me</a></li>
-                <li><a class="current-page" href="Recent-posts.html">Recent Posts</a></li>
+                <li><a href="Recent-posts.html">Recent Posts</a></li>
             </ul>
         </nav>
     </div> <!--/container-->
