--- a/About-me.html
+++ b/About-me.html
@@ -25,7 +25,7 @@
         <nav>
             <ul class="nav-bar">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="About-me.html">About Me</a></li>
+                <li><a class="current-page" href="About-me.html">About Me</a></li>
                 <li><a href="Recent-posts.html">Recent Posts</a></li>
             </ul>
         </nav>
