the html and css file was edited

--- a/index.html
+++ b/index.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,700&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@1,700&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
@@ -19,7 +13,7 @@
         <div class="container container-flex">
         <div class="site-title">
             <h1>Living A Simple Life</h1>
-            <p class="subtitle">A Blog Exploring Minimalism In Life</p>
+            <p class="subtitle">Exploring Minimalism In Life</p>
         </div>
 
         <nav>
@@ -31,9 +25,13 @@
         </nav>
     </div> <!--/container-->
     </header> 
+
+
       
      <div class="container container-flex">
-        <main>
+
+
+        <main role="main">
             <article class="article-featured">
             <p class="article-info">21 July, 2019 | 3 comments</p>
             <img class="images-featured" src="images/mikal.jpg" alt="A lamp and a flower jar on the table">
@@ -45,7 +43,7 @@
           <article class="article-recent">
              <div class="article-recent-head">
                 <h2>Keeping cooking simple</h2>
-                <p class="article-body">Food is a part of everyone's life, if you want to be healthy, you have to eat healthy. One of the simplests ways to do that is to keep your meals nice and simple.</p>
+                <p class="article-body">Food is a part of everyone's life, if you want to be healthy, you have to eat healthy. One of the simplest ways to do that is to keep your meals nice and simple.</p>
                 <a class="read-more" href="#">CONTINUE READING</a>
              </div>
              
@@ -81,6 +79,8 @@
             </div>
          </article>
         </main>
+
+
 
 
         <aside>
