--- a/Recent-posts.html
+++ b/Recent-posts.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,700&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@1,700&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
@@ -19,7 +13,7 @@
         <div class="container container-flex">
         <div class="site-title">
             <h1>Living A Simple Life</h1>
-            <p class="subtitle">A Blog Exploring Minimalism In Life</p>
+            <p class="subtitle">Exploring Minimalism In Life</p>
         </div>
 
         <nav>
