--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container container-flex">
         <div class="site-title">
             <h1>Living A Simple Life</h1>
-            <p class="subtitle">Exploring Minimalism In Life</p>
+            <p class="subtitle">A Blog Exploring Minimalism In Life</p>
         </div>
 
         <nav>
