changed style.css and the different html files

--- a/About-me.html
+++ b/About-me.html
@@ -5,21 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@1,700&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Living A Simple Life</title>
+
     <link rel="stylesheet" href="style.css"> 
 </head>
+
+
+
 <body>
     <header>
         <div class="container container-flex">
-        <div class="site-title">
+        <div class="title">
             <h1>Living A Simple Life</h1>
             <p class="subtitle">A Blog Exploring Minimalism In Life</p>
         </div>
 
         <nav>
-            <ul class="nav-bar">
+            <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a class="current-page" href="About-me.html">About Me</a></li>
+                <li><a class="home" href="About-me.html">About Me</a></li>
                 <li><a href="Recent-posts.html">Recent Posts</a></li>
             </ul>
         </nav>
@@ -32,6 +36,8 @@
 
 
         <main role="main">
+
+
             <img class="image-full" src="images/andrea.jpg" alt="Lady sitting on a street bench and looking at her laptop">
             <h2>My name is Emmanuella and living the simple life saved me.</h2>
              
@@ -65,26 +71,32 @@
 
 
 
-        <aside>
-          <div class="aside-bar">
-            <h3>Recent Posts</h3>
-            <div class="aside-bar-widget">
-              <img class="aside-images" src="images/bawon.jpg" alt="A plate of pasta and meatballs">
-              <p class="aside-body">Keeping cooking simple</p>
+        <aside class="sidebar">
+
+          <div class="sidebar-widget">
+            <h3>RECENT POST</h3>
+
+            <div class="widget-recent-post">
+                <h3 class="widget-recent-post-title">Keeping cooking simple</h3>
+              <img class="widget-image" src="images/bawon.jpg" alt="A plate of pasta and meatballs">
             </div>
-            <div class="aside-bar-widget">
-              <img class="aside-images" src="images/olexa.jpg" alt="A woman sitting with a laptop and some books">
-              <p class="aside-body">Simplicity in work</p>
+            <div class="widget-recent-post">
+                <h3 class="widget-recent-post-title">Simplicity in work</h3>
+                <img class="widget-image" src="images/olexa.jpg" alt="A woman sitting with a laptop and some books">
             </div>
-            <div class="aside-bar-widget">
-            <img class="aside-images" src="images/jumbo.jpg" alt="A home desk with a lamp and a flower on the wall">
-            <p class="aside-body">Simple decorations</p>
+            <div class="widget-recent-post">
+                <h3 class="widget-recent-post-title">Simple decorations</h3>
+                <img class="widget-image" src="images/jumbo.jpg" alt="A home desk with a lamp and a flower on the wall">
          </div>
         </div>
         </aside>
-     </div>
+     </div> <!---. /main and aside container-->
     
   <footer>
-      <p class="base">Living A Simple Life</p>
-      <p class="base">Copyright 2019</p>
+      <p class="footer">Living A Simple Life</p>
+      <p class="footer">Copyright 2022</p>
+      <p class="footer-email">email: otumanuella@gmail.com</p>
   </footer>
+
+</body>
+</html>
